fixed naming && merged routes and controller methods to match projects other controllers methods style
