# controllers/user_provider.go
@@ -1,121 +1,84 @@
 package controllers
 
 import (
+	"github.com/beego/beego/utils/pagination"
 	"github.com/casdoor/casdoor/object"
 	"github.com/casdoor/casdoor/util"
 )
 
-// GetAllUserProviders
-// @Title GetAllUserProviders
+// GetUserProviders
+// @Title GetUserProviders
 // @Tag UserProvider API
 // @Description get userProviders
+// @Param   owner     query    string  true        "The owner of userProviders"
 // @Success 200 {array} object.UserProvider The Response object
 // @router /get-user-providers [get]
-func (c *ApiController) GetAllUserProviders() {
-	if _, res := c.RequireAdmin(); !res {
-		c.ResponseError(c.T("auth:Unauthorized operation"))
-		return
-	}
-
-	userProviders, err := object.GetAllUserProviders()
-
-	err = fillUserProviders(userProviders)
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	c.ResponseOk(userProviders)
-}
-
-// GetUserProvidersByOwner
-// @Title GetUserProvidersByOwner
-// @Tag UserProvider API
-// @Description get userProviders by owner
-// @Param   owner query    string  true        "The owner of the provider"
-// @Success 200 {array} object.UserProvider The Response object
-// @router /get-user-providers-by-owner [get]
-func (c *ApiController) GetUserProvidersByOwner() {
+func (c *ApiController) GetUserProviders() {
 	owner := c.Input().Get("owner")
+	limit := c.Input().Get("pageSize")
+	page := c.Input().Get("p")
+	field := c.Input().Get("field")
+	value := c.Input().Get("value")
+	sortField := c.Input().Get("sortField")
+	sortOrder := c.Input().Get("sortOrder")
 
-	if _, res := c.RequireAdmin(); !res {
+	if !c.IsGlobalAdmin() && owner == "" {
 		c.ResponseError(c.T("auth:Unauthorized operation"))
 		return
 	}
 
-	if owner == "" {
-		c.ResponseError(c.T("general:Missing parameter") + ": owner")
+	if limit == "" || page == "" {
+		userProviders, err := object.GetUserProviders(owner)
+		if err != nil {
+			c.ResponseError(err.Error())
+			return
+		}
+
+		err = fillUserProviders(userProviders)
+		if err != nil {
+			c.ResponseError(err.Error())
+			return
+		}
+
+		c.ResponseOk(userProviders)
+	} else {
+		limit := util.ParseInt(limit)
+		count, err := object.GetUserProviderCount(owner, field, value)
+		if err != nil {
+			c.ResponseError(err.Error())
+			return
+		}
+
+		paginator := pagination.SetPaginator(c.Ctx, limit, count)
+		paginationUserProviders, err := object.GetPaginationUserProviders(owner, paginator.Offset(), limit, field, value, sortField, sortOrder)
+		if err != nil {
+			c.ResponseError(err.Error())
+			return
+		}
+
+		err = fillUserProviders(paginationUserProviders)
+		if err != nil {
+			c.ResponseError(err.Error())
+			return
+		}
+
+		c.ResponseOk(paginationUserProviders, paginator.Nums())
 	}
-
-	userProviders, err := object.GetUserProvidersByOwner(owner)
-
-	err = fillUserProviders(userProviders)
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	c.ResponseOk(userProviders)
-}
-
-// GetUserProvidersByUserName
-// @Title GetUserProvidersByUserName
-// @Tag UserProvider API
-// @Description get userProviders by username
-// @Param   userName query    string  true        "The name of the user"
-// @Success 200 {array} object.UserProvider The Response object
-// @router /get-user-providers-by-user-name [get]
-func (c *ApiController) GetUserProvidersByUserName() {
-	userName := c.Input().Get("userName")
-
-	if _, res := c.RequireAdmin(); !res {
-		c.ResponseError(c.T("auth:Unauthorized operation"))
-		return
-	}
-
-	if userName == "" {
-		c.ResponseError(c.T("general:Missing parameter") + ": userName")
-	}
-
-	userProviders, err := object.GetUserProvidersByUserName(userName)
-
-	err = fillUserProviders(userProviders)
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	c.ResponseOk(userProviders)
 }
 
 // GetUserProvider
 // @Title GetUserProvider
 // @Tag UserProvider API
 // @Description get userProvider
-// @Param   owner        query    string  true        "The owner of the provider"
-// @Param   providerName query    string  true        "The name of the provider"
-// @Param   userName     query    string  true        "The name of the user"
+// @Param   owner        		query    string  true        "The owner of the provider"
+// @Param   providerName 		query    string  true        "The name of the provider"
+// @Param   userProviderName    query    string  true        "The name of the user in the provider"
 // @Success 200 {object} object.UserProvider The Response object
 // @router /get-user-provider [get]
 func (c *ApiController) GetUserProvider() {
 	owner := c.Input().Get("owner")
 	providerName := c.Input().Get("providerName")
-	userName := c.Input().Get("userName")
+	userProviderName := c.Input().Get("userProviderName")
 
 	if _, res := c.RequireAdmin(); !res {
 		c.ResponseError(c.T("auth:Unauthorized operation"))
@@ -130,11 +93,11 @@ func (c *ApiController) GetUserProvider() {
 		c.ResponseError(c.T("general:Missing parameter") + ": providerName")
 	}
 
-	if userName == "" {
-		c.ResponseError(c.T("general:Missing parameter") + ": userName")
+	if userProviderName == "" {
+		c.ResponseError(c.T("general:Missing parameter") + ": userProviderName")
 	}
 
-	userProvider, err := object.GetUserProvider(owner, providerName, userName)
+	userProvider, err := object.GetUserProvider(owner, providerName, userProviderName)
 
 	if userProvider == nil {
 		c.ResponseError(c.T("general:The userProvider doesn't exist"))
@@ -155,76 +118,6 @@ func (c *ApiController) GetUserProvider() {
 	c.ResponseOk(userProvider)
 }
 
-// GetUserProvidersByProviderName
-// @Title GetUserProvidersByProviderName
-// @Tag UserProvider API
-// @Description get userProviders by provider name
-// @Param   providerName query    string  true        "The name of the provider"
-// @Success 200 {array} object.UserProvider The Response object
-// @router /get-user-providers-by-provider-name [get]
-func (c *ApiController) GetUserProvidersByProviderName() {
-	providerName := c.Input().Get("providerName")
-
-	if _, res := c.RequireAdmin(); !res {
-		c.ResponseError(c.T("auth:Unauthorized operation"))
-		return
-	}
-
-	if providerName == "" {
-		c.ResponseError(c.T("general:Missing parameter") + ": providerName")
-	}
-
-	userProviders, err := object.GetUserProvidersByProviderName(providerName)
-
-	err = fillUserProviders(userProviders)
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	c.ResponseOk(userProviders)
-}
-
-// GetUserProvidersByUserId
-// @Title GetUserProvidersByUserId
-// @Tag UserProvider API
-// @Description get userProviders by provider name
-// @Param   userId query    string  true        "The id of the user"
-// @Success 200 {array} object.UserProvider The Response object
-// @router /get-user-providers-by-user-id [get]
-func (c *ApiController) GetUserProvidersByUserId() {
-	userId := c.Input().Get("userId")
-
-	if _, res := c.RequireAdmin(); !res {
-		c.ResponseError(c.T("auth:Unauthorized operation"))
-		return
-	}
-
-	if userId == "" {
-		c.ResponseError(c.T("general:Missing parameter") + ": userId")
-	}
-
-	userProviders, err := object.GetUserProvidersByUserId(userId)
-
-	err = fillUserProviders(userProviders)
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	if err != nil {
-		c.ResponseError(err.Error())
-		return
-	}
-
-	c.ResponseOk(userProviders)
-}
-
 func fillUserProviders(userProviders []*object.UserProvider) (err error) {
 	for _, provider := range userProviders {
 		provider.ProviderObj, err = object.GetProvider(util.GetId(provider.Owner, provider.ProviderName))
@@ -232,7 +125,7 @@ func fillUserProviders(userProviders []*object.UserProvider) (err error) {
 			return err
 		}
 
-		provider.UserObj, err = object.GetUser(util.GetId(provider.Owner, provider.UserName))
+		provider.UserObj, err = object.GetUser(util.GetId(provider.Owner, provider.UserProviderName))
 		if err != nil {
 			return err
 		}
