# swagger/swagger.json
@@ -3572,8 +3572,8 @@
                     },
                     {
                         "in": "query",
-                        "name": "userName",
-                        "description": "The name of the user",
+                        "name": "userProviderName",
+                        "description": "The name of the user in the provider",
                         "required": true,
                         "type": "string"
                     }
@@ -3594,119 +3594,12 @@
                     "UserProvider API"
                 ],
                 "description": "get userProviders",
-                "operationId": "ApiController.GetAllUserProviders",
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/object.UserProvider"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/get-user-providers-by-owner": {
-            "get": {
-                "tags": [
-                    "UserProvider API"
-                ],
-                "description": "get userProviders by owner",
-                "operationId": "ApiController.GetUserProvidersByOwner",
+                "operationId": "ApiController.GetUserProviders",
                 "parameters": [
                     {
                         "in": "query",
                         "name": "owner",
-                        "description": "The owner of the provider",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/object.UserProvider"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/get-user-providers-by-provider-name": {
-            "get": {
-                "tags": [
-                    "UserProvider API"
-                ],
-                "description": "get userProviders by provider name",
-                "operationId": "ApiController.GetUserProvidersByProviderName",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "providerName",
-                        "description": "The name of the provider",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/object.UserProvider"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/get-user-providers-by-user-id": {
-            "get": {
-                "tags": [
-                    "UserProvider API"
-                ],
-                "description": "get userProviders by provider name",
-                "operationId": "ApiController.GetUserProvidersByUserId",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "userId",
-                        "description": "The id of the user",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/object.UserProvider"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/get-user-providers-by-user-name": {
-            "get": {
-                "tags": [
-                    "UserProvider API"
-                ],
-                "description": "get userProviders by username",
-                "operationId": "ApiController.GetUserProvidersByUserName",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "userName",
-                        "description": "The name of the user",
+                        "description": "The owner of userProviders",
                         "required": true,
                         "type": "string"
                     }
@@ -8023,11 +7916,11 @@
                 "userId": {
                     "type": "string"
                 },
-                "userName": {
-                    "type": "string"
-                },
                 "userObj": {
                     "$ref": "#/definitions/object.User"
+                },
+                "userProviderName": {
+                    "type": "string"
                 }
             }
         },
